crates/loxide_interpreter/tests/snapshots/integration@operator__comparison.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
print 1 < 2;    // expect: true
// => bool(true)
print 2 < 2;    // expect: false
// => bool(false)
print 2 < 1;    // expect: false
// => bool(false)

print 1 <= 2;    // expect: true
// => bool(true)
print 2 <= 2;    // expect: true
// => bool(true)
print 2 <= 1;    // expect: false
// => bool(false)

print 1 > 2;    // expect: false
// => bool(false)
print 2 > 2;    // expect: false
// => bool(false)
print 2 > 1;    // expect: true
// => bool(true)

print 1 >= 2;    // expect: false
// => bool(false)
print 2 >= 2;    // expect: true
// => bool(true)
print 2 >= 1;    // expect: true
// => bool(true)

// Zero and negative zero compare the same.
print 0 < -0; // expect: false
// => bool(false)
print -0 < 0; // expect: false
// => bool(false)
print 0 > -0; // expect: false
// => bool(false)
print -0 > 0; // expect: false
// => bool(false)
print 0 <= -0; // expect: true
// => bool(true)
print -0 <= 0; // expect: true
// => bool(true)
print 0 >= -0; // expect: true
// => bool(true)
print -0 >= 0; // expect: true
// => bool(true)
