crates/loxide_interpreter/tests/snapshots/integration@operator__divide.snap
---
source: crates/loxide_interpreter/tests/integration.rs
expression: result
---
print 8 / 2;         // expect: 4
// => num(4)
print 12.34 / 12.34;  // expect: 1
// => num(1)
